# infraguid-microservices

./: .dockerignore  .env.example  .gitignore  docker-compose.yml
.github/workflows/: agent-service.yml  chat-service.yml  frontend.yml  ingestion-service.yml  log-intel-lambda.yml  rag-service.yml
frontend/: Dockerfile  README.md  admin.html  index.html  login.html  nginx.conf  signup.html
frontend/css/: style.css
frontend/js/: admin.js  auth.js  chat.js
knowledge-base/: README.md
knowledge-base/aws/: aws_bedrock_guide.md  aws_cloudfront_guide.md  aws_iam_guide.md  aws_vpc_guide.md
knowledge-base/company/: company_profile.md  service_catalog.md
knowledge-base/metadata/: architecture_standards_guide.json  aws_bedrock_guide.json  aws_cloudfront_guide.json  aws_iam_guide.json  aws_vpc_guide.json  client_engagement_lifecycle.json  cost_optimization_guide.json  deployment_runbook.json  incident_response_sop.json  (+8 more)
scripts/: seed_ingest.sh  wait-for-it.sh
shared/: pyproject.toml
shared/infraguid_common/: __init__.py
shared/infraguid_common/cache/: redis_client.py  session_store.py
shared/infraguid_common/config/: secrets_manager.py  settings.py
shared/infraguid_common/database/: models.py  postgres_client.py
shared/infraguid_common/database/repositories/: document_repo.py  user_repo.py
shared/infraguid_common/http/: service_client.py
shared/infraguid_common/llm/: bedrock.py  prompt_templates.py
shared/infraguid_common/observability/: logger.py
shared/infraguid_common/queue/: sqs_client.py
shared/infraguid_common/vectorstore/: pgvector_store.py
(+64 files in other folders)
