[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "infraguid-common"
version = "0.1.0"
description = "Shared library for InfraGuidAI microservices (config, database, vectorstore, llm, observability)."
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "pgvector==0.3.6",
    "boto3==1.35.86",
    "botocore==1.35.86",
    "httpx==0.27.2",
    "redis[asyncio]>=5.2.0,<6.0.0",
    "langchain-core==0.3.59",
    "langchain-aws==0.2.10",
]

[tool.setuptools.packages.find]
include = ["infraguid_common*"]
